# simple-scoreboard

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  scores.db
db/: init.sql
doc/: README.md
migrations/: 20231115183019_init.sql
src/: database.rs  flags.rs  hbs_helpers.rs  main.rs  scores.rs
templates/: index.html.hbs  scoreboard.html.hbs  submit_flag.html.hbs
