[package]
name = "scoreboard"
version = "0.4.0"
authors = ["zuyoutoki"]
rust-version = "1.74.0"
description = "a simple scoreboard for ctf events"
publish = false
edition = "2021"

[dependencies.rocket]
version = "=0.5.0"
features = ["http2"]

[dependencies.rocket_dyn_templates]
version = "=0.1.0"
features = ["handlebars"]

[dependencies.rocket-include-static-resources]
version = "0.10.5"

[dependencies.serde]
version = "1.0.196"
features = ["std"]

[dependencies.serde_json]
version = "1.0.113"
features = ["std"]

[dependencies.sqlx]
version = "=0.7.3"
features = ["runtime-tokio", "sqlite", "chrono"]

[dependencies.chrono]
version = "0.4.34"
features = ["serde"]

